--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,10 @@
 <app-navbar></app-navbar>
+<div class="app">
+    <div class="container">
+        <router-outlet>
+
+        </router-outlet>
+    </div>
+</div>
+
 <app-footer></app-footer>
