--- a/src/app/layouts/footer/footer.html
+++ b/src/app/layouts/footer/footer.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto text-center">
+                 <h6 class="text-primary brand">Todo App</h6>
+                 <p>Developed by Me</p>
+            </div>
+        </div>
+    </div>
+</footer>
