--- a/src/app/category/category.html
+++ b/src/app/category/category.html
@@ -1,1 +1,20 @@
-<p>category works!</p>
+<div class="row justify-content-center md-3">
+    <div class="col-md-4 text center">
+        <h1>TODO CATEGORIES</h1>
+        <p class="text-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        
+        </p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+        <form action="" class="form-inline">
+            <div class="col-md-10 form-group">
+                <input type="text" placeholder="Add new caterories here" name="categoryName" class="form-control-plaintext">
+            </div>
+            <button type="submit" class="btn btn-primary col-md-2 btn-todo btn-block">Add</button>
+               
+        </form>
+    </div>
+</div>
