--- a/src/app/category/category.html
+++ b/src/app/category/category.html
@@ -10,11 +10,28 @@
 <div class="row">
     <div class="col-md-12">
         <form action="" class="form-inline">
-            <div class="col-md-10 form-group">
-                <input type="text" placeholder="Add new caterories here" name="categoryName" class="form-control-plaintext">
+            <div class="col-md-9 form-group">
+                <input type="text" placeholder="Add new caterories here" name="categoryName" class=" form-control-plaintext drop-shadow" >
             </div>
-            <button type="submit" class="btn btn-primary col-md-2 btn-todo btn-block">Add</button>
-               
+                <button type="submit" class="btn btn-primary col-md-2 btn-todo btn-block drop-shadow" > Add </button>
         </form>
+    </div>
+</div>
+
+<div class="row categories-list">
+    <div class="col-md-3">
+        <div class="card">
+            <div class="card-body">
+                <div class="clearfix">
+                    <div class="float-left">
+                        <div class="badge badge-primary" >CATEGORY </div>
+                    </div>
+                    <div class="float-right cat-tools">
+                    
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
