--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+.drop-shadow{
+        box-shadow: 0px 0px 33px -10px rgba(71,114,250,3);
+}
